kubernetes/media/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  labels:
    app: radarr
spec:
  ports:
    - name: radarr
      port: 80
      targetPort: 7878
  selector:
    app: radarr
