kubernetes/media/radarr/ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: radarr
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`radarr.kurz.site`)
    kind: Rule
    services:
    - name: radarr
      port: 80
    middlewares:
      - name: traefik-forward-auth
        namespace: traefik
  tls:
    certResolver: letsencrypt
